--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,13 @@
 <resources>
     <string name="app_name">RoomDatabase</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="enter_title">Enter Title</string>
+    <string name="enter_message">Enter Message</string>
+    <string name="is_completed">Is Completed</string>
+    <string name="completed_date">Completed date</string>
+    <string name="add">Add</string>
+    <string name="add_title">Add Title</string>
+    <string name="enter_description">Enter description</string>
+    <string name="add_description">Add Description</string>
 </resources>
