--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,11 @@
     <string name="add_title">Add Title</string>
     <string name="enter_description">Enter description</string>
     <string name="add_description">Add Description</string>
+    <string name="updated">Updated</string>
+    <string name="update">Update</string>
+    <string name="delete">Delete</string>
+    <string name="delete_notes">Delete Notes</string>
+    <string name="delete_message">Do you want to delete selected notes?</string>
+    <string name="yes">Yes</string>
+    <string name="no">NO</string>
 </resources>
